--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,9 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>User Directory</h1>
+    <h1 class="heading1">Welcome, to the Matrix</h1>
+
+    <form>
+        <input name="headingChange" type="text" id="headingChange" size="50%"/>
+    </form>
+    
+    <br><br>
+
+    <button>Click Here to Change Your Destiny</button>
+
+    <br><br>
+
+    <p>"There is a difference between knowing the path<br>and walking the path."</p>
+
+    <script src="index.js"></script>
 </body>
 </html>
