--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 <body>
     <h1 class="heading1">User Directory</h1>
 
-    <form>
-        <label for="headingChange" >Name: </label>
-        <input name="headingChange" type="text" autofocus id="headingChange" size="50%"/>
-        <button type="submit">Go</button>
-    </form>
+    <form id="userForm">
+        <p>
+            <label for="userName" >Name: </label>
+            <input name="userName" type="text" autofocus id="userName" size="50%"/>
+        </p>
+        <p>
+            <label for="age">Age:</label>
+            <input type="number" name="age" />
+        </p>
+        <button type="submit">Add</button>
+        <button type="reset">Reset</button>
 
+    </form>
+    <br>
     <div id="users"></div>
 
     <script src="index.js"></script>
