--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1 class="heading1">User Directory</h1>
+    <h1 class="heading">User Directory</h1>
 
     <form id="userForm">
         <p>
