--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <label for="age">Age:</label>
             <input type="number" name="age" />
         </p>
+        <p>
+            <label for="favcolor">Favorite Color: </label>
+            <input type="text" name="favcolor" />
+        </p>
         <button type="submit">Add</button>
         <button type="reset">Reset</button>
 
