use the color input for favorite color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <p>
             <label for="favcolor">Favorite Color: </label>
-            <input type="text" name="favcolor" />
+            <input type="color" name="favcolor" />
         </p>
         <button type="submit">Add</button>
         <button type="reset">Reset</button>
