--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="heading">User Directory</h1>
-
+    <p id="warning"></p>
     <form id="userForm">
         <p>
             <label for="userName" >Enter a Name into the Directory: </label><br>
