added base value to input color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <p>
             <label for="favcolor">Favorite Color:   </label>
-            <input type="color" name="favcolor" />
+            <input type="color" name="favcolor" value="#000000"/>
         </p>
         <button type="submit">Add to Directory</button>
         <button type="reset">Reset Current User Info</button>
